<?xml version="1.0"?>
<package>
  <name>robotiq_3_finger_gripper_driver</name>
  <version>0.0.0</version>
  <description>
    ROS driver for Robotiq 3-finger adaptive grippers over Modbus-TCP
  </description>

  <maintainer email="calder.phillips-grafflin@tri.global">
    Calder Phillips-Grafflin
  </maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>common_robotics_utilities</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>common_robotics_utilities</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
