<?xml version="1.0"?>
<package>
  <name>tri_driver_common</name>
  <version>0.0.0</version>
  <description>
    Common utilities for TRI hardware drivers
  </description>

  <maintainer email="calder.phillips-grafflin@tri.global">
    Calder Phillips-Grafflin
  </maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
